--- a/index.Rmd
+++ b/index.Rmd
@@ -22,20 +22,25 @@ knitr::opts_chunk$set(echo = TRUE,
   cache.path = ifelse(knitr::is_html_output(), 'cache-gitbook/', 'cache-pdfbook/'))
 ```
 
+# Aim of this document
+
+This documentation contains the code to partially reproduce the results in the manuscript *Finding a suitable library size to call variants in RNA-Seq*, from the download of the raw sequenced files to variant calling. It also contains supplementary information regarding downsampling of the TCGA-LAML samples and the truth set used to compute sensitivity with this cohort.
+
+The example variant callset obtained with the Leucegene samples only contains published somatic variants[@Lavallee2016-sf].   
+
 # Setup
 
 To run the workflow in the next sections, clone the repository below:
 
 ```{bash engine=bash,eval=FALSE}
 git clone git@github.com:annaquaglieri16/Supporting-scripts-library-size-RNA-Seq.git
-
 cd ./Supporting-scripts-library-size-RNA-Seq
 ```
 
 
 The functions used for variant calling and downsampling are inside the `./functions` folder. 
 
-* Chapter \@ref(ch:leucegene-down) comments the steps to download and run QC on example files from the Leucegene cohort. The script `./functions/download-and-qc.sh` contains only the scripts to run.
+* Chapter \@ref(ch:leucegene-down) contains the steps to download and run QC analyses on example files from the Leucegene cohort. The script `./functions/download-and-qc.sh` contains only the scripts without comments.
 * To follow the steps and settings used to align, call and create a standardised output of the variants, see Chapter \@ref(ch:acs). Once the examples files are downloaded and pre-processed it is possible to run the whole workflow by running the script `./functions/align-call-stand.sh`, after appropriately setting input files and directory and downloading the required programs.
 * Chapter \@ref(ch:tcga-down) contains information about the proportions used to downsample the TCGA-LAML samples.
 
